<resources>
    <string name="app_name">PocketTeacher</string>
    <string name="facebook_app_id">677146416430272</string>
    <string name="fb_login_protocol_scheme">fb677146416430272</string>
    <string name="message_pocket_teacher">Pocket Teacher</string>
    <string name="message_login_page_1">Don\'t have an account?</string>
    <string name="message_login_page_2">Forgot password?</string>
    <string name="message_or">OR</string>
    <string name="message_signin_with_social_networks">Sign in with social networks</string>
    <string name="message_registration_page_1">Who are you?</string>
    <string name="message_registration_page_2">Student</string>
    <string name="message_registration_page_3">Teacher</string>
    <string name="message_registration_page_4">By creating an account you agree to the</string>
    <string name="message_registration_page_5">and</string>
    <string name="message_confirmation_sent_1">Action performed!</string>
    <string name="message_confirmation_sent_2">A confirmation mail has been sent to your email address. You will need the received code in order to activate your account. *</string>
    <string name="message_confirmation_sent_3">* Make sure to also check the spam folder</string>
    <string name="message_confirm_email_1">Your account is currently locked.\nPlease insert the confirmation code to unlock.</string>
    <string name="message_confirm_email_2">Did not receive one?</string>
    <string name="message_confirm_email_3">Confirmation Successful!</string>
    <string name="message_confirm_email_4">Email re-sent.</string>
    <string name="message_forgot_password_1">We just need your registered email address to send you the password reset code </string>
    <string name="message_forgot_password_2">Don\'t have an account?</string>
    <string name="message_reset_password_1">Can\'t find it?</string>
    <string name="message_reset_password_2">Set up new password</string>
    <string name="message_reset_password_3">Code re-sent.</string>
    <string name="message_registration_facebook_google_page_1">There is no active account assigned to this email address.</string>
    <string name="message_registration_facebook_google_page_2">Choose the type of account you want to create</string>
    <string name="message_user_profile_1">Followers</string>
    <string name="message_user_profile_2">Description</string>
    <string name="message_user_profile_3">Subjects</string>
    <string name="message_user_profile_4">Following</string>
    <string name="message_settings_teacher_1">All the information provided in this following section is public and any changes can be immediately noticed by other users.</string>
    <string name="message_settings_teacher_2">Change</string>
    <string name="message_settings_teacher_3">All the information provided in this following section is private and will not be displayed for the other users.</string>
    <string name="message_settings_teacher_4">Legal aspects and considerations can be found in the next section.</string>
    <string name="message_settings_teacher_5">View</string>
    <string name="message_settings_teacher_6">Be very careful with the following section. The actions is permanent.</string>
    <string name="message_settings_teacher_7">Delete</string>
    <string name="message_strings_teacher_8">Delete account</string>
    <string name="message_change_username_1">Change your current username. You will need your new username for further logins.\nThis action is immediate once you <b>go back</b>. </string>
    <string name="message_change_privacy_1">Change your current account privacy status.\nThis action is immediate once you <b>go back.</b> </string>
    <string name="message_change_privacy_2">Student see follow you and access your content without requesting that.</string>
    <string name="message_change_privacy_3">You need to approve follow requests before students are allowed to see your content.\nGoing back to public after being public will <b>APPROVE</b> all pending follow requests.</string>
    <string name="message_change_privacy_4">Public account</string>
    <string name="message_change_privacy_5">Private account</string>
    <string name="message_change_privacy_6">Teachers can see your profile description and details</string>
    <string name="message_change_privacy_7">Teachers can not see your profile description and details</string>
    <string name="message_change_password_1">Change your current password. You will need your new password for further logins.\nEmpty means no change.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_change_email_1">Change your current email. You will be logged out of your account.\n This action is immediate once you <b>go back</b>.</string>
    <string name="message_change_email_2">WARNING: if you logged in with Facebook/Google it will not change your email there AND you will no longer be able to log in to this account using those platforms.</string>
    <string name="message_quick_login_1">Change your current login status settings, whether to automatically log you into the account or require the credentials each time.\nIt will be enforced next time open the app.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_quick_login_2">Automatic login</string>
    <string name="message_edit_profile_1">All changes affect your profile in a very visible way. Keep in mind that anything you do will be easily observable by anyone accessing your profile. </string>
    <string name="message_change_name_1">Change your current first and last name. By not setting one of them it will result in your name being assigned as <b>Unknown Name</b>.\nThis action is immediate once you <b>go back</b>. </string>
    <string name="message_change_gender_1">Change your current gender. The major effect this has is on the default profile picture.\nThis action is immediate once you <b>go back</b>. </string>
    <string name="message_change_gender_2">Male</string>
    <string name="message_change_gender_3">Female</string>
    <string name="message_change_gender_4">Not specified.</string>
    <string name="message_change_university_1">Change your current university.\nMisinforming can be a cause for report and lead to having your account blocked.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_change_university_2">Change your current university.\nThis helps students find you, as they can search for specific universities.\nMisinforming can be a cause for report and lead to having your account blocked.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_change_profile_picture_1">Change your current profile picture. Not setting a profile picture will assign you a generic picture based on your gender.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_change_profile_picture_2">Select</string>
    <string name="message_change_description_1">Change your current profile description.\nThis helps students better understand who you are and therefore be more inclined to follow you.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_change_description_2">Change your current profile description.\nThis helps teachers better understand who is requesting to follow them.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_unknown_name">Unknown Name</string>
    <string name="message_unknown_university">Unknown University</string>
    <string name="message_no_description">No description.</string>
    <string name="message_folder_fragment_1">SUBJECTS</string>
    <string name="message_folder_fragment_2">You currently don\'t have any subjects assigned to your account.\nTo get started, add one using the dotted circle to the bottom of the screen. </string>
    <string name="message_add_subject_1">Select a subject to be added to your existing list by scrolling through the existing options down below.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_add_subject_2">Can\'t find subject on the list?</string>
    <string name="message_filter">Filter</string>
    <string name="message_remove_subject_1">Choose the subject(s) you wish to remove.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_remove_subject_2">WARNING</string>
    <string name="message_remove_subject_3">Deleting a subject will erase all your posts that are related to it.</string>
    <string name="message_folders_1">You currently don\'t have any folders for this subject.\nAdd one using the dotted circle to the bottom of the screen.</string>
    <string name="message_folders_2">Folder</string>
    <string name="message_add_folder_1">Create a new folder where you can add files.\nChoose a fitting title to encourage students to acces it.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_remove_folder_1">Choose the folder(s) you wish to remove.\nThis action is immediate once you <b>go back</b>.</string>
    <string name="message_remove_folder_2">Deleting a folder will erase all your files that are within it.</string>
    <string name="message_popup_request_sent">Request sent!</string>
    <string name="message_popup_report_sent">Report sent!</string>
    <string name="message_files_page_1">Here you can access all the files in this current folder, and you can also <b>ADD</b> new content.</string>
    <string name="message_files_page_2">You currently don\'t have any files in this folder.\nPost something using the plus sign at the bottom of the screen!</string>
    <string name="message_add_file_1">Add a title for the file you wish to add in order to offer a quick idea  of the content.</string>
    <string name="message_add_file_2">Create a description to let the students know what to expect from the file you are uploading.</string>
    <string name="message_add_file_3">Formats accepted: .txt, .docx, .pdf, .xlsx</string>
    <string name="message_add_file_4">Size greater than 10MB! It will not be uploaded!</string>
    <string name="message_add_file_5">Good file type and size.</string>
    <string name="message_add_file_6">Invalid file type!</string>
    <string name="message_post_1">Comments</string>
    <string name="message_post_2">There are not comments on this post.</string>
    <string name="message_no_subjects">This teacher has no subjects chosen.</string>
    <string name="trigger_email_confirmation_page">RE-SEND</string>
    <string name="hint_username">Username</string>
    <string name="hint_confirmation_code">Confirmation code</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_new_folder">New folder</string>
    <string name="verify_account">Verify Account</string>
    <string name="button_reset">Reset</string>
    <string name="button_clear">Clear</string>
    <string name="description_back_logo">This is the image used to go back.</string>
    <string name="description_email_confirmation">This is the email confirmation image</string>
    <string name="description_list_item_image_1">This is the image of the item in the listView for settings.</string>
    <string name="description_list_item_image_2">This is the image of the item in the listView for access.</string>
    <string name="toolbar_confirm_email">Confirm Email</string>
    <string name="toolbar_privacy">PRIVACY</string>
    <string name="toolbar_quick_login">QUICK LOGIN</string>
    <string name="toolbar_edit_name">EDIT NAME</string>
    <string name="toolbar_add_folder">ADD FOLDER</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_log_out">Log out</string>
</resources>