<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_about"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/logOut"
                android:icon="@drawable/logo_log_out"
                android:title="@string/menu_log_out"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>