<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context=".teacher.profile.settings.ChangeUsernameT">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/privacyToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_back_logo"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/toolbar_privacy"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Information -->
    <TextView
        android:id="@+id/infoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/privacyToolbar"
        android:fontFamily="@font/open_sans"
        android:text="@string/message_change_privacy_1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- Private/Public account -->
    <TextView
        android:id="@+id/privacyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/message_change_privacy_4"
        android:layout_below="@id/infoTV" />

    <!-- Switch between Private/Public -->
    <Switch
        android:id="@+id/privacySW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/infoTV"
        />

    <!-- Additional information -->
    <TextView
        android:id="@+id/info1TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/privacySW"
        android:fontFamily="@font/open_sans"
        android:text="@string/message_change_privacy_2"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- Reset Button -->
    <android.widget.Button
        android:id="@+id/resetBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans_bold"
        android:textStyle="bold"
        android:text="@string/button_reset"
        android:textSize="16sp"/>

</RelativeLayout>