<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Settings icon -->
    <ImageView
        android:id="@+id/startIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:src="@drawable/ic_person_black_24dp"
        android:contentDescription="@string/description_list_item_image_1"/>

    <!-- Settings name -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@id/startIV"
        android:fontFamily="@font/open_sans"
        android:text="@string/hint_username"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!-- Arrow image -->
    <ImageView
        android:id="@+id/endIV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_navigate_next_black_24dp"
        android:contentDescription="@string/description_list_item_image_2"/>

</RelativeLayout>