<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue"
    tools:context=".teacher.profile.settings.ChangeUsernameT">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addFolderToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:elevation="10dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_back_logo"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/toolbar_add_folder"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Information -->
    <TextView
        android:id="@+id/infoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addFolderToolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/message_add_folder_1"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- New folder EditText -->
    <EditText
        android:id="@+id/folderNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:drawableStart="@drawable/ic_folder_white_24dp"
        android:importantForAutofill="no"
        android:fontFamily="@font/roboto"
        android:textColor="@color/white"
        android:hint="@string/hint_new_folder"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890()- "
        android:ems="10"
        android:maxLength="50"
        android:inputType="text" />


    <!-- Clear button -->
    <android.widget.Button
        android:id="@+id/clearBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/open_sans_bold"
        android:padding="15dp"
        android:text="@string/button_clear"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>